<resources>
    <string name="password">Password</string>
    <string name="username_email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="new_device">New Device</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="please_check_your_email_to_get_the_code">Please check your email to get the code</string>
    <string name="code_verification">Code Verification</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="request">Request</string>
    <string name="request_new_device">Request New Device</string>
    <string name="home">Home</string>
    <string name="approval">Approval</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="out">Out</string>
    <string name="employee">Employee</string>
    <string name="work_unit">Work unit</string>
    <string name="start_shift_date">Start Shift Date</string>
    <string name="shift_exchange_date">Shift Exchange Date</string>

    <string name="save">Save</string>
    <string name="history">History</string>
    <string name="filter">Filter</string>
    <string name="presence">Presence</string>
    <string name="exchange_shift">Shift Exchange</string>
    <string name="permission_and_leave"><![CDATA[Permission & Leave]]></string>
    <string name="permission_and_leave_approval"><![CDATA[Permission & Leave Approval]]></string>
    <string name="team_working_schedule">Team Schedule</string>
    <string name="in">In</string>
    <string name="shift_exchange_history">Shift Exchange History</string>
    <string name="year">Year</string>
    <string name="apply">Apply</string>
    <string name="applicant_employee">Applicant Employee</string>
    <string name="name">Name</string>
    <string name="shift_date">Shift Date</string>
    <string name="substitute_employees">Substitute Employees</string>
    <string name="status_information">Status Information</string>
    <string name="detail_information">Detail Information</string>
    <string name="cancel">Cancel</string>
    <string name="shift_exchange_submission_details">Shift Exchange Submission Detail</string>
    <string name="empty_data">Data is empty</string>
    <string name="rejection_reason">Rejection Reason</string>
    <string name="back">Back</string>
    <string name="status_note">Status Note</string>
    <string name="reject">Reject</string>
    <string name="shift_exchange_approval_details">Shift Exchange Approval Detail</string>
    <string name="accept">Accept</string>
    <string name="process">Process</string>
    <string name="leave_type">Leave Type</string>
    <string name="status">Status</string>
    <string name="reason">Reason</string>
    <string name="leave_quota">Leave Quota</string>
    <string name="date">Date</string>
    <string name="date_range">Date Range</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="time">Time</string>
    <string name="period">Period</string>
    <string name="taken">Taken</string>
    <string name="rest_of_leave">Rest Of Leave</string>
    <string name="expired">Expired</string>
    <string name="permission_leave_history"><![CDATA[Permission & Leave History]]></string>
    <string name="leave_date">Leave Date</string>
    <string name="initial_input">Initial Input</string>
    <string name="last_change">last_change</string>
    <string name="permission_leave_detail"><![CDATA[Permission & Leave Detail]]></string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="ok">Ok</string>
    <string name="title_activity_presensi_map">Map</string>
    <string name="employee_list">Employee List</string>
    <string name="presence_history">Presence List</string>
    <string name="presence_in">Presence In</string>
    <string name="presence_out">Presence Out</string>
    <string name="exit_application">Exit application ?</string>
    <string name="submitted_on">Submitted on</string>
    <string name="waiting">Waiting</string>
    <string name="different_date">Different date</string>
    <string name="same_date">Same date</string>
    <string name="entry_time">Entry Time</string>
    <string name="out_time">Out Time</string>
    <string name="saved">Saved</string>
    <string name="submitted">Submited</string>
    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="canceled">Cancelled</string>
    <string name="hurry_up_you_are_out_of_the_presence_area">You\'re outside the zone!</string>
    <string name="you_re_in_the_zone">You\'re inside the zone!</string>
    <string name="change_password">Change Password</string>
    <string name="nip">NIP</string>
    <string name="position">Position</string>
    <string name="unit">Unit</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="old_password">Old Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="english">English</string>
    <string name="change_language">Change Language</string>
    <string name="month">Month</string>
    <string name="confirm_cancel_exchange">Are you sure you want to cancel the shift exchange?</string>
    <string name="note">Note</string>
    <string name="accept_shift_request">Accept shift exchange?</string>
    <string name="refuse_shift_request">Refuse shift exchange?</string>
    <string name="confirm_cancel_leave">Are you sure you want to cancel leave / permission?</string>
    <string name="accept_leave_request">Accept leave request?</string>
    <string name="refuse_leave_request">Refuse leave request?</string>
    <string name="accept_overtime_request">Accept overtime request?</string>
    <string name="refuse_overtime_request">Refuse overtime request?</string>
    <string name="cancel_reason">Cancel reason</string>
    <string name="upload_file">Upload File</string>
    <string name="change_profil_foto">Change Profile Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_gallery">Choose From Photo Album</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="percentage_npresence">Percentage\nPresence</string>
    <string name="leave_nquota">Leave\nQuota</string>
    <string name="email_not_valid">Format Email Not Valid</string>
    <string name="password_not_match">Password Not Match</string>
    <string name="choose_image">Choose Image</string>
    <string name="max_file_size">Max file size</string>
    <string name="done_presence_in">You have made a presence in, now you have to do a presence out</string>
    <string name="not_done_presence_in">You have not made a presence in, do a presence in first</string>
    <string name="info_fake_gps">The location used is not appropriate\nBe sure not to use a fake location or install a fake gps application</string>
    <string name="halo">Hello,</string>
    <string name="request_exchange_to">Shift exchange request to</string>
    <string name="all">All</string>
    <string name="fill_start_date_first">Choose start date first</string>
    <string name="use_max_info">Max used</string>
    <string name="date_already">Date already picked</string>
    <string name="strip">-</string>
    <string name="approve">Approve</string>
    <string name="approve_all">Approve All</string>
    <string name="reject_all">Reject All</string>
    <string name="your_position">Your Position</string>
    <string name="leave_approv_processed">Leave has been processed</string>
    <string name="overtime_approv_processed">Overtime has been processed</string>
    <string name="exchange_approve_processed">Exchange shift has been processed</string>
    <string name="attach_file">Attachment</string>
    <string name="upload_document">Upload Document</string>
    <string name="download_title">Downloading please wait..</string>
    <string name="reset">Reset</string>
    <string name="shift_name">Shift Name</string>
    <string name="device_not_compatible">Device not compatible with this app</string>
    <string name="file_invalid">File invalid, try another</string>
    <string name="choose_date">Choose Date</string>
    <string name="day">Day</string>
    <string name="tampilkan_lainnya"><u>Tampilkan lainnya</u></string>
    <string name="sembunyikan"><u>Sembunyikan</u></string>
    <string name="lembur">Lembur</string>
    <string name="slip_gaji">Slip Gaji</string>
    <string name="tanggal_overtime">Overtime Date</string>
    <string name="tentukan_tanggal">Tentukan Tanggal</string>
    <string name="keterangan">Keterangan</string>
    <string name="tambah">Tambah</string>
    <string name="pengajuan_lembur">Request Overtime</string>
    <string name="pilih_tgl_dulu">Pilih tanggal Overtime dahulu</string>
    <string name="pilih_waktu_awal_dulu">Pilih waktu mulai dahulu</string>
    <string name="riwayat_lembur">History Overtime</string>
    <string name="detail_lembur">Detail Overtime</string>
    <string name="confirm_cancel_overtime">Are you sure you want to cancel overtime?</string>
    <string name="edit"><u>Edit</u></string>
    <string name="lihat_detail"><u>More detail >></u></string>
    <string name="permohonan_lembur">Permohonan lembur dari</string>
    <string name="diajukan_pada">Diajukan pada </string>
    <string name="activity_not_found">No installed application can open this document</string>
    <string name="kirim_email">Send Email</string>
    <string name="new_employees">New Employees</string>
    <string name="chat">Chat</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>

    <string name="atur_info_waktu_mulai">Atur info waktu mulai</string>
    <string name="atur_info_waktu_selesai">Atur info waktu selesai</string>
    <string name="buat_pertemuan">Buat\nPertemuan</string>
    <string name="gabung_pertemuan">Gabung\nPertemuan</string>
</resources>