<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".utils.EditDataOvertimeFragment">

    <View
        android:layout_width="40dp"
        android:layout_height="8dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="#CCCBCB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:background="@drawable/bg_rounded"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_overtime"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/etTanggalOvertimeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_full"
            android:backgroundTint="@color/light_grey"
            android:drawableEnd="@drawable/ic_calendar"
            android:focusable="false"
            android:hint="@string/tentukan_tanggal"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/time"
            android:textColor="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWaktuMulaiEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_full"
            android:backgroundTint="@color/light_grey"
            android:drawableEnd="@drawable/ic_clock2"
            android:focusable="false"
            android:hint="@string/start"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWaktuSelesaiEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_full"
            android:backgroundTint="@color/light_grey"
            android:drawableEnd="@drawable/ic_clock2"
            android:focusable="false"
            android:hint="@string/end"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/keterangan"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etKeteranganEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_rounded"
        android:gravity="top"
        android:imeOptions="actionDone"
        android:inputType="text|textMultiLine"
        android:minHeight="150dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btApplyEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:background="@drawable/button_selector"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>